[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/menus/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/SceneManager.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/Transition Circle Sheet.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "fade_to_black"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.196078, 0.196078, 0.196078, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_to_normal"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.196078, 0.196078, 0.196078, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="GameMain" type="Node2D"]
script = ExtResource( 6 )

[node name="CurrentScene" type="Node" parent="."]

[node name="MainMenu" parent="CurrentScene" instance=ExtResource( 1 )]

[node name="ScreenTransitionLayer" type="CanvasLayer" parent="."]
layer = 20

[node name="Sprite" type="Sprite" parent="ScreenTransitionLayer"]
visible = false
self_modulate = Color( 0.196078, 0.196078, 0.196078, 1 )
texture = ExtResource( 7 )
centered = false
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransitionLayer"]
anims/fade_to_black = SubResource( 1 )
anims/fade_to_normal = SubResource( 2 )

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
volume_db = -40.0
bus = "Music"

[node name="VolumeTween" type="Tween" parent="GameMusic"]

[node name="SFX1" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="SFX2" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[connection signal="animation_finished" from="ScreenTransitionLayer/AnimationPlayer" to="." method="_on_transition_animation_finished"]
[connection signal="tween_completed" from="GameMusic/VolumeTween" to="." method="_on_VolumeTween_tween_completed"]
